Update pubs and openings

--- a/COIN/opening.html
+++ b/COIN/opening.html
@@ -36,21 +36,36 @@ You can get a sense of the style of our work by looking at <a href="../publicati
 <p><div id="Openings"></p>
 <h2>Openings</h2>
 <ul>
+<li><p><a href="https://research.ie/funding/ebp/?f=">Employment-Based Postgraduate Programme</a>. <br />
+Deadline: 16:00 (Irish time) 16 November 2023. <br />
+<b>Note</b>: Interested canddiates should contact me earlier to prepare the proposal.</p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://research.ie/funding/eps-postgrad/?f=">Enterprise Partnership Scheme (Postgraduate)</a>. <br />
+Deadline: 16:00 (Irish time) 16 November 2023. <br />
+<b>Note</b>: Interested canddiates should contact me earlier to prepare the proposal.</p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://research.ie/funding/eps-postdoc/?f=">Enterprise Partnership Scheme (Postdoctoral)</a>. <br />
+Deadline: 16:00 (Irish time) 16 November 2023. <br />
+<b>Note</b>: Interested canddiates should contact me earlier to prepare the proposal.</p>
+</li>
+</ul>
+<ul>
 <li><p>Ireland Postdoctoral Fellowship Programme by the <a href="https://research.ie/funding/goipd/">Government of Ireland</a>. <br />
-Deadline:  12 October 2023. <br />
-<b>Note</b>: Interested canddiates should contact me earlier to discuss our research interests and prepare the proposal. </p>
+Deadline: 12 October 2023. <b>Closed</b> <br />  </p>
 </li>
 </ul>
 <ul>
 <li><p>Postgraduate Scholarship Programme by the <a href="https://research.ie/funding/goipg/">Government of Ireland</a>. <br />
-Deadline:  12 October 2023. <br />
-<b>Note</b>: Interested canddiates should contact me earlier to discuss our research interests and prepare the proposal. </p>
+Deadline: 12 October 2023. <b>Closed</b> <br />  </p>
 </li>
 </ul>
 <ul>
 <li><p>You are invited to apply for <a href="https://marie-sklodowska-curie-actions.ec.europa.eu/calls/msca-postdoctoral-fellowships-2023">MSCA Postdoctoral Fellowships 2023</a>. <br />
-Deadline: 13 September 2023 (proposal submission). <br />
-<b>Note</b>: Interested canddiates should contact me earlier to discuss our research interests and prepare the proposal. </p>
+Deadline: 13 September 2023 (proposal submission). <b>Closed</b> <br /> </p>
 </li>
 </ul>
 <ul>
@@ -85,7 +100,7 @@ Deadline: 24 March 2023. <b>Closed</b></p>
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-08-16 11:03:10 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-10-14 10:55:58 GMT Daylight Time.
 </div>
 </div>
 </td>
