--- a/COIN/team.html
+++ b/COIN/team.html
@@ -43,7 +43,7 @@
 <a href="https://www.linkedin.com/in/pqv90/">LinkedIn</a>, 
 <a href="https://orcid.org/0000-0002-9485-9216">ORCID</a>, 
 <a href="https://www.scopus.com/authid/detail.uri?authorId=56884048100">Scopus</a>, 
-and <a href="https://www.webofscience.com/wos/author/record/1818422">Publons</a>. </p>
+and <a href="https://www.webofscience.com/wos/author/record/1818422">Web of Science</a></p>
 </li>
 </ul>
 <p></div></p>
@@ -57,7 +57,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422">Publons</a>
 <li><p>Research Topic: Blockchain-enabled intelligent security and privacy preservation for IoT data marketplace. </p>
 </li></ul>
 </li>
-<li><p>Tuan Van tran</p>
+<li><p>Tuan Van Tran</p>
 <ul>
 <li><p>PhD Student, <a href="https://www.tcd.ie/">Trinity College Dublin</a>, 2023/09 - Present.</p>
 </li>
@@ -87,7 +87,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422">Publons</a>
 </li>
 <li><p>Visiting PhD Student, <a href="https://www.tcd.ie/">Trinity College Dublin</a>, 2023/05 - Present.</p>
 </li>
-<li><p>Research Topic: Wireless artificial intelligence (AI) and aerial access networks.</p>
+<li><p>PhD Thesis: I-enabled Resource Allocation in Intelligent Wireless Networks.</p>
 </li>
 <li><p>Co-supervised with <a href="https://wireless-ai.pusan.ac.kr/wireless-ai/index.do">Professor Won-Joo Hwang</a>.</p>
 </li></ul>
@@ -202,7 +202,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422">Publons</a>
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-09-01 09:52:47 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-10-07 14:36:53 GMT Daylight Time.
 </div>
 </div>
 </td>
