--- a/activity.html
+++ b/activity.html
@@ -42,7 +42,7 @@
 <p><div id="Guest Editor"></p>
 <h2>Guest Editor</h2>
 <ul>
-<li><p><a href="https://www.comsoc.org/publications/magazines/ieee-internet-things-magazine/cfp/federated-learning-industrial-internet">IEEE Internet of Things Magazine</a>, Federated Learning for the Industrial Internet of Things (IIoT), 2023 - Present.</p>
+<li><p><a href="https://www.comsoc.org/publications/magazines/ieee-internet-things-magazine/cfp/federated-learning-industrial-internet">IEEE Internet of Things Magazine</a>, Federated Learning for Industrial Internet of Things, 2023 - Present.</p>
 </li>
 <li><p><a href="https://ctsoc.ieee.org/images/TCE_FILES/TCE_SS_CFP_Federated_learning_for_personalized_recommendation_of_consumer_electronics.pdf">IEEE Transactions on Consumer Electronics</a>, Federated Learning for Personalized Recommendation of Consumer Electronics, 2023 - Present.</p>
 </li>
@@ -162,7 +162,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-08-24 11:52:25 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-10-07 14:38:44 GMT Daylight Time.
 </div>
 </div>
 </td>
