--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422">Web of Scie
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
-<li><p><a href="./COIN/opening.html"><font color=red size=+0.5><b>Openning!</b></font></a> Applicants are invited to join my COIN-Lab@TCD under Postgraduate Scholarship and Postdoctoral Fellowship Programs of the Government of Ireland. </p>
+<li><p><a href="./COIN/opening.html"><font color=red size=+0.5><b>Openning!</b></font></a> Applicants are invited to join my COIN-Lab@TCD under the Irish Research Council's Postgraduate/Postdoctoral Programme. </p>
 </li>
 <li><p>[08/2023] I have been appointed as the Demonstrator and Teaching Assistant Director.</p>
 </li>
@@ -95,7 +95,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422">Web of Scie
 <p><div id="Selected Publication"></p>
 <h2>Selected Publication <a href="publication.html">(<font color=red size=+0.5><b>Full Publication</b></font></a>)</h2>
 <ol>
-<li><p>M. Le, H. T. Dinh, D. N. Nguyen, W.-J. Hwang, and Q.-V. Pham, &ldquo;<a href="https://arxiv.org/abs/2308.04953">Wirelessly Powered Federated Learning Networks: Joint Power Transfer, Data Sensing, Model Training, and Resource Allocation</a>,&rdquo; 2023.</p>
+<li><p>M. Le, H. T. Dinh, D. N. Nguyen, W.-J. Hwang, and Q.-V. Pham, &ldquo;<a href="https://arxiv.org/abs/2308.04953">Wirelessly Powered Federated Learning Networks: Joint Power Transfer, Data Sensing, Model Training, and Resource Allocation</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, 2023.</p>
 </li>
 <li><p>M.-D. Nguyen, Q.-V. Pham, H. T. Dinh, L. Tran-Thanh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2209.14520">Label driven Knowledge Distillation for Federated Learning with non-IID Data</a>,&rdquo; 2023.</p>
 </li>
@@ -149,7 +149,7 @@ I very often have problems answering the &ldquo;What is your correct name?&rdquo
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-09-23 15:11:38 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-10-14 10:58:47 GMT Daylight Time.
 </div>
 </div>
 </td>
