--- a/publication.html
+++ b/publication.html
@@ -69,9 +69,10 @@
 <p><div id="Preprints"></p>
 <h2>Preprints</h2>
 <ol>
-<li><p>N.-M. Luu, M.-D. Nguyen, E. B. Mohamed, V.-D. Nguyen, and <b>Q.-V. Pham</b>, &ldquo;<a href="">Sample-Driven Control for Federated Learning for IoT Network with Real-Time Sensing</a>,&rdquo; submitted, <i>IEEE International Conference on Computer Communications (INFOCOM)</i>, Vancouver, Canada, 2024.</p>
+<li><p>K. Do, M.-D. Nguyen, T. H. Nguyen, L. Tran-Thanh, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://arxiv.org/abs/2309.14053">Revisiting LARS for Large Batch Training Generalization of Neural Networks</a>,&rdquo; submitted, <i>International Conference on Learning Representations (ICLR)</i>, Vienna Austria, 2024.</p>
 </li>
-<li><p>P. Boopathy, N. Deepa, N. Victor, T. R. Gadekallu, P. K. R. Maddikunta, G. Yenduri, W. Wang, <b>Q.-V. Pham</b>, T. Huynh-The, and M. Liyanage, &ldquo;<a href="https://arxiv.org/abs/2308.02677">Metaverse for Industry 5.0 in NextG Communications: Potential Applications and Future Challenges</a>,&rdquo; under review, <i>IEEE Open Journal of the Communications Society</i>, 2023.</p>
+<li><p>N.-M. Luu, M.-D. Nguyen, E. B. Mohamed, V.-D. Nguyen, and <b>Q.-V. Pham</b>, &ldquo;<a href="">Sample-Driven Control for Federated Learning for IoT Network with Real-Time Sensing</a>,&rdquo; submitted, <i>IEEE International Conference on Computer Communications (INFOCOM)</i>, Vancouver, Canada, 2024.
+</p>
 </li>
 <li><p>X. Zhu, H. Wang, Z. Yang, and <b>Q.-V. Pham</b>, &ldquo;<a href="">Time-Division Based Integrated Sensing, Communication, and Computing in Integrated Satellite-Terrestrial Networks</a>,&rdquo; under review, <i>Digital Signal Processing</i>, 2023.</p>
 </li>
@@ -79,11 +80,7 @@
 </li>
 <li><p>T. Huynh-The, N. C. Luong, H. Phan, D. B. da Costa, and <b>Q.-V. Pham</b>, &ldquo;<a href="">Improved Waveform Classification for Integrated Radar-Communication 6G Systems via Convolutional Neural Networks</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>, 2023.</p>
 </li>
-<li><p>M. Le, H. T. Dinh, D. N. Nguyen, W.-J. Hwang, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://arxiv.org/abs/2308.04953">Wirelessly Powered Federated Learning Networks: Joint Power Transfer, Data Sensing, Model Training, and Resource Allocation</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
-</li>
 <li><p>M. Le, T. Huynh-The, T. Do-Duy, T.-H. Vu, W.-J. Hwang, and <b>Q.-V. Pham</b>, &ldquo;<a href="">Applications of Distributed Machine Learning for the Internet-of-Things: A Comprehensive Survey</a>,&rdquo; under review, <i>IEEE Communications Surveys and Tutorials</i>.</p>
-</li>
-<li><p>T.-H. Vu, <b>Q.-V. Pham</b>, and S. Kim, &ldquo;<a href="">THz-based Rate-Splitting Multiple-Access (RSMA): Is It Always Better Than NOMA?</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>.</p>
 </li>
 <li><p>N. C. Luong, T. Huynh-The, V. D. Nguyen, D. W. K. Ng, S. Chatzinotas, D. Niyato, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://arxiv.org/abs/2212.06463">Edge Computing for Semantic Communication Enabled Metaverse: An Incentive Mechanism Design</a>,&rdquo; under review, <i>IEEE Network</i>.</p>
 </li>
@@ -104,19 +101,23 @@
 <p><div id="2023 and Early Access"></p>
 <h2>2023 and Early Access</h2>
 <ol>
-<li><p>T.-H. Vu, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="https://dx.doi.org/10.1109/LWC.2023.3315751">Rate-Splitting Multiple Access-Assisted THz-Based Short-Packet Communications</a>,&rdquo; <i>IEEE Wireless Communications Letters</i>, 2023.</p>
+<li><p>T.-H. Vu, <b>Q.-V. Pham</b>, and S. Kim, &ldquo;<a href="">THz-based Rate-Splitting Multiple-Access (RSMA): Is It Always Better Than NOMA?</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, early access.</p>
+</li>
+<li><p>M. Le, H. T. Dinh, D. N. Nguyen, W.-J. Hwang, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://ieeexplore.ieee.org/document/10285339">Wirelessly Powered Federated Learning Networks: Joint Power Transfer, Data Sensing, Model Training, and Resource Allocation</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, early access.</p>
+</li>
+<li><p>T.-H. Vu, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="https://dx.doi.org/10.1109/LWC.2023.3315751">Rate-Splitting Multiple Access-Assisted THz-Based Short-Packet Communications</a>,&rdquo; <i>IEEE Wireless Communications Letters</i>, early access.</p>
 </li>
 <li><p>A. K. Bashir, N. Victor, S. Bhattacharya, T. Huynh-The, R. Chengoden, G. Yenduri, P. P. R. Maddikunta, <b>Q.-V. Pham</b>, T. R. Gadekallu, and M. Liyanage, &ldquo;<a href="https://ieeexplore.ieee.org/document/10215363">Federated Learning for the Healthcare Metaverse: Concepts, Applications, Challenges and Future Directions</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, early access.</p>
 </li>
 <li><p>S. Pakravan, J.-Y. Chouinard, X. Li, M. Zeng, W. Hao, <b>Q.-V. Pham</b>, and O. A. Dobre, &ldquo;<a href="https://dx.doi.org/10.1109/JIOT.2023.3296319">Physical Layer Security for NOMA Systems: Requirements, Issues, and Recommendations</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, early access.</p>
 </li>
-<li><p>A. Samanta, <b>Q.-V. Pham</b>, N.-N. Dao, A. Muthanna, and S. Cho, &ldquo;<a href="https://ieeexplore.ieee.org/document/10173593/">mISO: Incentivizing Demand-Agnostic Microservices for Edge-Enabled IoT Networks</a>,&rdquo; <i>Transactions on Services Computing</i>, early access.</p>
-</li>
 <li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/10132045">STAR-RIS Enabled Short-Packet NOMA Systems</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, early access.</p>
 </li>
-<li><p>M.-D. Nguyen, S.-M. Lee, <b>Q.-V. Pham</b>, H. T. Dinh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9829327">HCFL: A High Compression Approach for Communication-Efficient Federated Learning in Very Large Scale IoT Networks</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, early access. [<a href="https://github.com/skydvn/hcfl-compression">Python Code</a>]</p>
+<li><p>M.-D. Nguyen, S.-M. Lee, <b>Q.-V. Pham</b>, H. T. Dinh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9829327">HCFL: A High Compression Approach for Communication-Efficient Federated Learning in Very Large Scale IoT Networks</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, vol. 22, no. 11, pp. 6495-6507, Nov. 2023. [<a href="https://github.com/skydvn/hcfl-compression">Python Code</a>]</p>
 </li>
 <li><p>N. H. Chu, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, K. T. Phan, W.-J. Hwang, and E. Dutkiewicz, &ldquo;<a href="https://ieeexplore.ieee.org/document/10109100">AI-enabled mm-Waveform Configuration for Autonomous Vehicles with Integrated Communication and Sensing</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, vol. 10, no. 19, pp. 16727-16743, Oct. 2023.</p>
+</li>
+<li><p>A. Samanta, <b>Q.-V. Pham</b>, N.-N. Dao, A. Muthanna, and S. Cho, &ldquo;<a href="https://ieeexplore.ieee.org/document/10173593/">mISO: Incentivizing Demand-Agnostic Microservices for Edge-Enabled IoT Networks</a>,&rdquo; <i>Transactions on Services Computing</i>, vol. 16, no. 5, pp. 3523-3536, Sept.-Oct. 2023.</p>
 </li>
 <li><p>Y. M. Saputra, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, E. Dutkiewicz, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9785706">Federated Learning Framework with Straggling Mitigation and Privacy-Awareness for AI-based Mobile Application Services</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, vol. 22, no. 9, pp. 5296-5312, Sep. 2023.</p>
 </li>
@@ -392,7 +393,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-09-25 10:44:19 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-10-14 12:01:10 GMT Daylight Time.
 </div>
 </div>
 </td>
