Updated publications and team members

--- a/COIN/team.html
+++ b/COIN/team.html
@@ -64,9 +64,10 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422">Web of Scie
 <li><p>Research Topic: Adaptive framework for scaling federated learning (FL) in IoT systems. </p>
 </li></ul>
 </li>
-<li><p>PhD Student 3
-</p>
+<li><p>Mengyan Huang</p>
 <ul>
+<li><p>PhD Student, Xidian University, 2021/09 &ndash; Present.</p>
+</li>
 <li><p>Visiting PhD Student, <a href="https://www.tcd.ie/">Trinity College Dublin</a>, 2023/10 - Present.</p>
 </li>
 <li><p>Research Topic: beamforming/precoding, physical layer security, satellite communications, and NOMA.</p>
@@ -87,7 +88,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422">Web of Scie
 </li>
 <li><p>Visiting PhD Student, <a href="https://www.tcd.ie/">Trinity College Dublin</a>, 2023/05 - Present.</p>
 </li>
-<li><p>PhD Thesis: I-enabled Resource Allocation in Intelligent Wireless Networks.</p>
+<li><p>PhD Thesis: AI-enabled Resource Allocation in Intelligent Wireless Networks.</p>
 </li>
 <li><p>Co-supervised with <a href="https://wireless-ai.pusan.ac.kr/wireless-ai/index.do">Professor Won-Joo Hwang</a>.</p>
 </li></ul>
@@ -202,7 +203,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422">Web of Scie
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-10-07 14:36:53 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-10-29 10:44:23 GMT Standard Time.
 </div>
 </div>
 </td>
