--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Assistant Professor, Ph.D. <br />
 <li><p>Profiles: <a href="https://scholar.google.com/citations?hl=en&amp;user=zKX-0LIAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Google Scholar</a>, 
 <a href="https://www.researchgate.net/profile/Viet-Pham-46">ResearchGate</a>, <a href="https://www.linkedin.com/in/pqv90/">LinkedIn</a>, 
 <a href="https://orcid.org/0000-0002-9485-9216">ORCID</a>, <a href="https://www.scopus.com/authid/detail.uri?authorId=56884048100">Scopus</a>, 
-and <a href="https://www.webofscience.com/wos/author/record/1818422">Web of Science</a></p>
+and <a href="https://www.webofscience.com/wos/author/record/AAG-2266-2021">Web of Science</a></p>
 </li>
 <li><p>Office: 4.10, CONNECT Centre, Dunlop Oriel House, 34 Westland Row, 8PRX+RV Dublin</p>
 </li>
@@ -95,31 +95,34 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422">Web of Scie
 <p><div id="Selected Publication"></p>
 <h2>Selected Publication <a href="publication.html">(<font color=red size=+0.5><b>Full Publication</b></font></a>)</h2>
 <ol>
-<li><p>M. Le, H. T. Dinh, D. N. Nguyen, W.-J. Hwang, and Q.-V. Pham, &ldquo;<a href="https://arxiv.org/abs/2308.04953">Wirelessly Powered Federated Learning Networks: Joint Power Transfer, Data Sensing, Model Training, and Resource Allocation</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, 2023.</p>
+<li><p>M. Le, H. T. Dinh, D. N. Nguyen, W.-J. Hwang, and Q.-V. Pham, &ldquo;<a href="https://ieeexplore.ieee.org/document/10285339">Wirelessly Powered Federated Learning Networks: Joint Power Transfer, Data Sensing, Model Training, and Resource Allocation</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, 2023.</p>
+</li>
+<li><p>M.-D. Nguyen, Q.-V. Do, Z. Yang, W.-J. Hwang, and Q.-V. Pham, &ldquo;<a href="https://arxiv.org/abs/2309.14587">Joint Communication and Computation Framework for Goal-Oriented Semantic Communication with Distortion Rate Resilience</a>,&rdquo; 2023.</p>
+</li>
+<li><p>N.-M. Luu, M.-D. Nguyen, E. B. Mohamed, V.-D. Nguyen, D. T. Hoang, Diep N. Nguyen, and Q.-V. Pham, &ldquo;<a href="https://arxiv.org/abs/2310.07497">Sample-Driven Federated Learning for Energy-Efficient and Real-Time IoT Sensing</a>,&rdquo; 2023.</p>
 </li>
 <li><p>M.-D. Nguyen, Q.-V. Pham, H. T. Dinh, L. Tran-Thanh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2209.14520">Label driven Knowledge Distillation for Federated Learning with non-IID Data</a>,&rdquo; 2023.</p>
 </li>
 <li><p>Y. M. Saputra, D. N. Nguyen, H. T. Dinh, Q.-V. Pham, E. Dutkiewicz, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9785706">Federated Learning Framework with Straggling Mitigation and Privacy-Awareness for AI-based Mobile Application Services</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, 2023.</p>
 </li>
-<li><p>M.-D. Nguyen, S.-M. Lee, Q.-V. Pham, H. T. Dinh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9829327">HCFL: A High Compression Approach for Communication-Efficient Federated Learning in Very Large Scale IoT Networks</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, 2023.</p>
+<li><p>M.-D. Nguyen, S.-M. Lee, Q.-V. Pham, H. T. Dinh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9829327">HCFL: A High Compression Approach for Communication-Efficient Federated Learning in Very Large Scale IoT Networks</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, 2023.
+</p>
 </li>
-<li><p>A. Samanta, Q.-V. Pham, N.-N. Dao, A. Muthanna, and S. Cho, &ldquo;<a href="https://ieeexplore.ieee.org/document/10173593/">mISO: Incentivizing Demand-Agnostic Microservices for Edge-Enabled IoT Networks</a>,&rdquo; <i>Transactions on Services Computing</i>, 2023.</p>
+<li><p>T.-H. Vu, Q.-V. Pham, and S. Kim, &ldquo;<a href="https://dx.doi.org/10.1109/TVT.2023.3325244">THz-based Rate-Splitting Multiple-Access (RSMA): Is It Always Better Than NOMA?</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, 2023.</p>
 </li>
-<li><p>T.-H. Vu, T.-V. Nguyen, Q.-V. Pham, D. B. da Costa, and S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9964377">Short-Packet Communications in UAV-NOMA Systems under Imperfect CSI and SIC</a>,&rdquo; <i>IEEE Transactions on Cognitive Communications and Networking</i>, 2023.</p>
+<li><p>T.-H. Vu, Q.-V. Pham, D. B. da Costa, and S. Kim, &ldquo;<a href="https://dx.doi.org/10.1109/LWC.2023.3315751">Rate-Splitting Multiple Access-Assisted THz-Based Short-Packet Communications</a>,&rdquo; <i>IEEE Wireless Communications Letters</i>, 2023.</p>
 </li>
-<li><p>Q.-V. Pham, R. Ruby, F. Fang, D. C. Nguyen, Z. Yang, M. Le, Z. Ding, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9738797">Aerial Computing: A New Computing Paradigm, Applications, and Challenges</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, 2022.</p>
+<li><p>T.-H. Vu, T.-V. Nguyen, Q.-V. Pham, D. B. da Costa, and S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9964377">Short-Packet Communications in UAV-NOMA Systems under Imperfect CSI and SIC</a>,&rdquo; <i>IEEE Transactions on Cognitive Communications and Networking</i>, 2023.
+</p>
 </li>
 <li><p>Q.-V. Pham, M. Le, T. Huynh-The, Z. Han, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9709639">Energy-Efficient Federated Learning over UAV-enabled Wireless Powered Communications</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, 2022.</p>
 </li>
-<li><p>T. Huynh-The, T.-V. Nguyen, Q.-V. Pham, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9735404">MIMO-OFDM Modulation Classification Using Three-Dimensional Convolutional Network</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, 2022.</p>
+<li><p>T. Huynh-The, T.-V. Nguyen, Q.-V. Pham, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9735404">MIMO-OFDM Modulation Classification Using Three-Dimensional Convolutional Network</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, 2022.
+</p>
 </li>
-<li><p>Q. V. Do, Q.-V. Pham, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9584850/">Deep Reinforcement Learning for Energy-Efficient Federated Learning in UAV-Enabled Wireless Powered Networks</a>,&rdquo; <i>IEEE Communications Letters</i>, 2022.</p>
-</li>
-<li><p>T. Huynh-The, V.-S. Doan, C.-H. Hua, Q.-V. Pham, T.-V. Nguyen, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9416299">Accurate LPI Radar Waveform Recognition with CWD-TFA for Deep Convolutional Network</a>,&rdquo; <i>IEEE Wireless Communications Letters</i>, 2021.</p>
-</li>
-<li><p>L. Nkenyereye, L. Nkenyereye, Q.-V. Pham, and J. S. Song, &ldquo;<a href="https://ieeexplore.ieee.org/document/9555379">Efficient RSU Selection Scheme for Fog-Based Vehicular Software-Defined Network</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, 2021.</p>
-</li>
-<li><p>H. Han, J. Zhao, W. Zhai, Z. Xiong, D. Niyato, M. D. Renzo, Q.-V. Pham, W. Lu, and K.-Y. Lam, &ldquo;<a href="https://ieeexplore.ieee.org/document/9514563">RIS Aided Power Control for Physical-Layer Broadcasting</a>,&rdquo; <i>IEEE Transactions on Communications</i>, 2021.</p>
+<li><p>T. Huynh-The, V.-S. Doan, C.-H. Hua, Q.-V. Pham, T.-V. Nguyen, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9416299">Accurate LPI Radar Waveform Recognition with CWD-TFA for Deep Convolutional Network</a>,&rdquo; <i>IEEE Wireless Communications Letters</i>, 2021.
+
+</p>
 </li>
 <li><p>T. Huynh-The, C.-H. Hua, Q.-V. Pham, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/8963964">MCNet: An Efficient CNN Architecture for Robust Automatic Modulation Classification</a>,&rdquo; <i>IEEE Communications Letters</i>, 2020.</p>
 </li>
@@ -149,7 +152,7 @@ I very often have problems answering the &ldquo;What is your correct name?&rdquo
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-10-14 10:58:47 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-10-19 10:10:36 GMT Daylight Time.
 </div>
 </div>
 </td>
