--- a/publication.html
+++ b/publication.html
@@ -48,13 +48,13 @@
 <p><div id="Book Chapters"></p>
 <h2>Book Chapters</h2>
 <ol>
-<li><p>T. R. Gadekallu, R. Chengoden, N. Victor, T. Huynh-The,  P. K. R. Maddikunta, <b>Q.-V. Pham</b>, and P. Hegde, &ldquo;<a href="">Blockchain Technologies for Metaverse</a>,&rdquo; in <a href="https://www.amazon.com/Metaverse-Communication-Computing-Networks-Applications/dp/1394159986"><i>Metaverse Communication and Computing Networks: Applications, Technologies, and Approaches</i></a>, Wiley-IEEE Press, 2023.</p>
+<li><p>T. R. Gadekallu, R. Chengoden, N. Victor, T. Huynh-The,  P. K. R. Maddikunta, <b>Q.-V. Pham</b>, and P. Hegde, &ldquo;<a href="">Blockchain for the Metaverse: State-of-the-Art and Applications</a>,&rdquo; in <a href="https://www.amazon.com/Metaverse-Communication-Computing-Networks-Applications/dp/1394159986"><i>Metaverse Communication and Computing Networks: Applications, Technologies, and Approaches</i></a>, Wiley-IEEE Press, 2023.</p>
 </li>
 <li><p>T. Huynh-The, <b>Q.-V. Pham</b>, X.-Q. Pham, T. Do-Duy, and T. R. Gadekallu, &ldquo;<a href="">AI and Computer Vision Technologies for Metaverse</a>,&rdquo; in <a href="https://www.amazon.com/Metaverse-Communication-Computing-Networks-Applications/dp/1394159986"><i>Metaverse Communication and Computing Networks: Applications, Technologies, and Approaches</i></a>, Wiley-IEEE Press, 2023.</p>
 </li>
-<li><p><b>Q.-V. Pham</b>, T. Huynh-The, M. Zeng, Z. Yang, Z. Ding, and W.-J. Hwang, &ldquo;<a href="https://www.routledge.com/6G-Wireless-The-Communication-Paradigm-Beyond-2030/Tariq-Khandaker-Ansari/p/book/9781032251738">The Emergence of Aerial Computing: Applications and Challenges</a>,&rdquo; in <a href="https://www.routledge.com/6G-Wireless-The-Communication-Paradigm-Beyond-2030/Tariq-Khandaker-Ansari/p/book/9781032251738"><i>6G Wireless: The Communication Paradigm Beyond 2030</i></a>, CRC Press, 2022.</p>
+<li><p><b>Q.-V. Pham</b>, T. Huynh-The, M. Zeng, Z. Yang, Z. Ding, and W.-J. Hwang, &ldquo;<a href="https://www.taylorfrancis.com/chapters/edit/10.1201/9781003282211-6/emergence-aerial-computing-quoc-viet-pham-thien-huynh-zeng-ming-zhaohui-yang-zhiguo-ding-won-joo-hwang">The Emergence of Aerial Computing: Applications and Challenges</a>,&rdquo; in <a href="https://www.routledge.com/6G-Wireless-The-Communication-Paradigm-Beyond-2030/Tariq-Khandaker-Ansari/p/book/9781032251738"><i>6G Wireless: The Communication Paradigm Beyond 2030</i></a>, CRC Press, 2022.</p>
 </li>
-<li><p>M. Zeng, E. Bedeer, X. Li, <b>Q.-V. Pham</b>, O. A. Dobre, P. Fortier, and L. A. Rusch, &ldquo;<a href="https://www.routledge.com/6G-Wireless-The-Communication-Paradigm-Beyond-2030/Tariq-Khandaker-Ansari/p/book/9781032251738">IRS-Empowered Wireless Communications: State-of-the-Art, Key Techniques, and Open Issues</a>,&rdquo; in <a href="https://www.routledge.com/6G-Wireless-The-Communication-Paradigm-Beyond-2030/Tariq-Khandaker-Ansari/p/book/9781032251738"><i>6G Wireless: The Communication Paradigm Beyond 2030</i></a>, CRC Press, 2022.</p>
+<li><p>M. Zeng, E. Bedeer, X. Li, <b>Q.-V. Pham</b>, O. A. Dobre, P. Fortier, and L. A. Rusch, &ldquo;<a href="https://www.taylorfrancis.com/chapters/edit/10.1201/9781003282211-2/irs-empowered-wireless-communications-ming-zeng-ebrahim-bedeer-xingwang-li-quoc-viet-pham-octavia-dobre-paul-fortier-leslie-rusch">IRS-Empowered Wireless Communications: State-of-the-Art, Key Techniques, and Open Issues</a>,&rdquo; in <a href="https://www.routledge.com/6G-Wireless-The-Communication-Paradigm-Beyond-2030/Tariq-Khandaker-Ansari/p/book/9781032251738"><i>6G Wireless: The Communication Paradigm Beyond 2030</i></a>, CRC Press, 2022.</p>
 </li>
 <li><p>Z. Yang, <b>Q.-V. Pham</b>, C. Huang, Q. Yang, T. Guo, Y. Xu, and Z. Zhang, &ldquo;<a href="https://www.taylorfrancis.com/chapters/edit/10.1201/b22998-5/machine-learning-uav-communication-assisted-computing-networks-quoc-viet-pham-zhaohui-yang-chongwen-huang-qianqian-yang-tianhao-guo-yongjun-xu-zhaoyang-zhang">Machine Learning for UAV Communication-Assisted Computing Networks</a>,&rdquo; in <a href="https://www.taylorfrancis.com/books/edit/10.1201/b22998/secure-digitalized-future-mobility-yue-cao-omprakash-kaiwartya-tiancheng-li?refId=1b59be08-3b27-41d0-b3f4-20c38a281353&amp;context=ubx"><i>Secure and Digitalized Future Mobility: Shaping the Ground and Air Vehicles Cooperation</i></a>, CRC Press, 2022.</p>
 </li>
@@ -69,28 +69,34 @@
 <p><div id="Preprints"></p>
 <h2>Preprints</h2>
 <ol>
+<li><p>T.-H. Vu, D. B. da Costa, S. Kim, and <b>Q.-V. Pham</b>, &ldquo;<a href="">Downlink Multiuser RSMA Networks: A General Analytical Framework for the Error Rate Performance</a>,&rdquo; under review, <i>IEEE Transactions on Wireless Communications</i>.</p>
+</li>
+<li><p>M.-D. Nguyen, Q.-V. Do, Z. Yang, W.-J. Hwang, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://arxiv.org/abs/2309.14587">Joint Communication and Computation Framework for Goal-Oriented Semantic Communication with Distortion Rate Resilience</a>,&rdquo; under review, <i>IEEE Transactions on Mobile Computing</i>.</p>
+</li>
+<li><p>T.-H. Vu, M. Zeng, S. Kim, H. V. Poor, and <b>Q.-V. Pham</b>, &ldquo;<a href="">Short-Packet Communications: State-of-the-art and Recent Advances</a>,&rdquo; under review, <i>IEEE Wireless Communications</i>.</p>
+</li>
 <li><p>K. Do, M.-D. Nguyen, T. H. Nguyen, L. Tran-Thanh, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://arxiv.org/abs/2309.14053">Revisiting LARS for Large Batch Training Generalization of Neural Networks</a>,&rdquo; submitted, <i>International Conference on Learning Representations (ICLR)</i>, Vienna Austria, 2024.</p>
 </li>
-<li><p>N.-M. Luu, M.-D. Nguyen, E. B. Mohamed, V.-D. Nguyen, and <b>Q.-V. Pham</b>, &ldquo;<a href="">Sample-Driven Control for Federated Learning for IoT Network with Real-Time Sensing</a>,&rdquo; submitted, <i>IEEE International Conference on Computer Communications (INFOCOM)</i>, Vancouver, Canada, 2024.
+<li><p>N.-M. Luu, M.-D. Nguyen, E. B. Mohamed, V.-D. Nguyen, D. T. Hoang, Diep N. Nguyen, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://arxiv.org/abs/2310.07497">Sample-Driven Federated Learning for Energy-Efficient and Real-Time IoT Sensing</a>,&rdquo; under review, <i>IEEE Transactions on Wireless Communications</i>.
 </p>
 </li>
-<li><p>X. Zhu, H. Wang, Z. Yang, and <b>Q.-V. Pham</b>, &ldquo;<a href="">Time-Division Based Integrated Sensing, Communication, and Computing in Integrated Satellite-Terrestrial Networks</a>,&rdquo; under review, <i>Digital Signal Processing</i>, 2023.</p>
+<li><p>P. Boopathy, N. Deepa, N. Victor, T. R. Gadekallu, P. K. R. Maddikunta, G. Yenduri, W. Wang, <b>Q.-V. Pham</b>, T. Huynh-The, and M. Liyanage, &ldquo;<a href="https://arxiv.org/abs/2308.02677">Metaverse for Industry 5.0 in NextG Communications: Potential Applications and Future Challenges</a>,&rdquo; under review, <i>IEEE Transactions on Consumer Electronics</i>.</p>
 </li>
-<li><p>T.-T. Dao, D.-I. Noh, M. Hasegawa, H. Sekiya, and W.-J. Hwang, and <b>Q.-V. Pham</b>, &ldquo;<a href="">VT-MCNet: High-Accuracy Automatic Modulation Classification Model based on Vision Transformer</a>,&rdquo; under review, <i>IEEE Communications Letters</i>, 2023.</p>
+<li><p>T.-T. Dao, D.-I. Noh, M. Hasegawa, H. Sekiya, and W.-J. Hwang, and <b>Q.-V. Pham</b>, &ldquo;<a href="">VT-MCNet: High-Accuracy Automatic Modulation Classification Model based on Vision Transformer</a>,&rdquo; under review, <i>IEEE Communications Letters</i>.</p>
 </li>
-<li><p>T. Huynh-The, N. C. Luong, H. Phan, D. B. da Costa, and <b>Q.-V. Pham</b>, &ldquo;<a href="">Improved Waveform Classification for Integrated Radar-Communication 6G Systems via Convolutional Neural Networks</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>, 2023.</p>
+<li><p>T. Huynh-The, N. C. Luong, H. Phan, D. B. da Costa, and <b>Q.-V. Pham</b>, &ldquo;<a href="">Improved Waveform Classification for Integrated Radar-Communication 6G Systems via Convolutional Neural Networks</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>.</p>
 </li>
-<li><p>M. Le, T. Huynh-The, T. Do-Duy, T.-H. Vu, W.-J. Hwang, and <b>Q.-V. Pham</b>, &ldquo;<a href="">Applications of Distributed Machine Learning for the Internet-of-Things: A Comprehensive Survey</a>,&rdquo; under review, <i>IEEE Communications Surveys and Tutorials</i>.</p>
+<li><p>M. Le, T. Huynh-The, T. Do-Duy, T.-H. Vu, W.-J. Hwang, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://arxiv.org/abs/2310.10549">Applications of Distributed Machine Learning for the Internet-of-Things: A Comprehensive Survey</a>,&rdquo; under review, <i>IEEE Communications Surveys and Tutorials</i>.</p>
 </li>
 <li><p>N. C. Luong, T. Huynh-The, V. D. Nguyen, D. W. K. Ng, S. Chatzinotas, D. Niyato, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://arxiv.org/abs/2212.06463">Edge Computing for Semantic Communication Enabled Metaverse: An Incentive Mechanism Design</a>,&rdquo; under review, <i>IEEE Network</i>.</p>
 </li>
 <li><p>Y. Ding, Z. Yang, <b>Q.-V. Pham</b>, Z. Zhang, and M. Shikh-Bahaei, &ldquo;<a href="https://arxiv.org/abs/2301.00912">Distributed Machine Learning for UAV Swarms: Computing, Sensing, and Semantics</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
 </li>
-<li><p>M.-D. Nguyen, <b>Q.-V. Pham</b>, H. T. Dinh, L. Tran-Thanh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2209.14520">Label driven Knowledge Distillation for Federated Learning with non-IID Data</a>,&rdquo; under review, <i>IEEE Transactions on Neural Networks and Learning Systems</i>, 2023.</p>
+<li><p>M.-D. Nguyen, <b>Q.-V. Pham</b>, H. T. Dinh, L. Tran-Thanh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2209.14520">Label driven Knowledge Distillation for Federated Learning with non-IID Data</a>,&rdquo; under review, <i>IEEE Transactions on Neural Networks and Learning Systems</i>.</p>
 </li>
 <li><p>T.-H. Vu, <b>Q.-V. Pham</b>, T.-T. Nguyen, D. B. da Costa, and S. Kim, &ldquo;<a href="">Enhancing RIS-Aided Two-Way Full-Duplex Communication with Non-Orthogonal Multiple Access</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>.</p>
 </li>
-<li><p>L. N. T. Huynh, <b>Q.-V. Pham</b>, Y. K. Tun, M. D. Hossain, and E.-N. Huh, &ldquo;<a href="">A Block-structured Optimization Approach for Data Sensing and Computing in Vehicle-assisted Edge Computing Networks</a>,&rdquo; under review, <i>IEEE Sensor Journal</i>.</p>
+<li><p>L. N. T. Huynh, M. D. Hossain, <b>Q.-V. Pham</b>, Y. K. Tun, and E.-N. Huh, &ldquo;<a href="">A Block-structured Optimization Approach for Data Sensing and Computing in Vehicle-assisted Edge Computing Networks</a>,&rdquo; under review, <i>IEEE Sensors Journal</i>.</p>
 </li>
 <li><p>M. Le, Q. V. Do, Z. Han, and W.-J. Hwang, and <b>Q.-V. Pham</b>, &ldquo;<a href="">Resource Allocation in THz-NOMA-enabled HAP Systems Based on Deep Reinforcement Learning</a>,&rdquo; under review, <i>IEEE Wireless Communications Letters</i>.</p>
 </li>
@@ -101,7 +107,7 @@
 <p><div id="2023 and Early Access"></p>
 <h2>2023 and Early Access</h2>
 <ol>
-<li><p>T.-H. Vu, <b>Q.-V. Pham</b>, and S. Kim, &ldquo;<a href="">THz-based Rate-Splitting Multiple-Access (RSMA): Is It Always Better Than NOMA?</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, early access.</p>
+<li><p>T.-H. Vu, <b>Q.-V. Pham</b>, and S. Kim, &ldquo;<a href="https://dx.doi.org/10.1109/TVT.2023.3325244">THz-based Rate-Splitting Multiple-Access (RSMA): Is It Always Better Than NOMA?</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, early access.</p>
 </li>
 <li><p>M. Le, H. T. Dinh, D. N. Nguyen, W.-J. Hwang, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://ieeexplore.ieee.org/document/10285339">Wirelessly Powered Federated Learning Networks: Joint Power Transfer, Data Sensing, Model Training, and Resource Allocation</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, early access.</p>
 </li>
@@ -114,6 +120,8 @@
 <li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/10132045">STAR-RIS Enabled Short-Packet NOMA Systems</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, early access.</p>
 </li>
 <li><p>M.-D. Nguyen, S.-M. Lee, <b>Q.-V. Pham</b>, H. T. Dinh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9829327">HCFL: A High Compression Approach for Communication-Efficient Federated Learning in Very Large Scale IoT Networks</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, vol. 22, no. 11, pp. 6495-6507, Nov. 2023. [<a href="https://github.com/skydvn/hcfl-compression">Python Code</a>]</p>
+</li>
+<li><p>X. Zhu, H. Wang, Z. Yang, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://doi.org/10.1016/j.dsp.2023.104262">Time-Division Based Integrated Sensing, Communication, and Computing in Integrated Satellite-Terrestrial Networks</a>,&rdquo; <i>Digital Signal Processing</i>, vol. 143, pp. 104262, Nov. 2023.</p>
 </li>
 <li><p>N. H. Chu, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, K. T. Phan, W.-J. Hwang, and E. Dutkiewicz, &ldquo;<a href="https://ieeexplore.ieee.org/document/10109100">AI-enabled mm-Waveform Configuration for Autonomous Vehicles with Integrated Communication and Sensing</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, vol. 10, no. 19, pp. 16727-16743, Oct. 2023.</p>
 </li>
@@ -329,7 +337,7 @@
 </li>
 <li><p>T. T. Nguyen, C. M. Nguyen, T. Huynh-The, <b>Q.-V. Pham</b>, Q. V. H. Nguyen, I. Razzak, and V. J. Reddi, &ldquo;<a href="http://dx.doi.org/10.1007/978-3-031-36021-3_30">Solving Complex Sequential Decision-Making Problems by Deep Reinforcement Learning with Heuristic Rules</a>,&rdquo; in <i>International Conference on Computational Science (ICCS)</i>, Prague, Czech Republic, Jul. 2023.</p>
 </li>
-<li><p>T.-H. Vu, <b>Q.-V. Pham</b>, D. B. da Costa, M. Debbah, and S. Kim, &ldquo;<a href="">Physical-Layer Security in Short-Packet NOMA Systems with Untrusted Near User</a>,&rdquo; in <i>IEEE International Conference on Communications (ICC)</i>, Rome, Italy, May 2023.</p>
+<li><p>T.-H. Vu, <b>Q.-V. Pham</b>, D. B. da Costa, M. Debbah, and S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/10283496">Physical-Layer Security in Short-Packet NOMA Systems with Untrusted Near User</a>,&rdquo; in <i>IEEE International Conference on Communications (ICC)</i>, Rome, Italy, May 2023.</p>
 </li>
 <li><p>M.-D. Nguyen, X.-T. Nguyen, H.-S. Luong, <b>Q.-V. Pham</b>, Q. V. Do, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9943034/">FFD: A Full-Stack Federated Distillation method for Heterogeneous Massive IoT Networks</a>,&rdquo; in <i>IEEE International Conference on Advanced Technology for Communications (ATC)</i>, Hanoi, Vietnam, Oct. 2022.</p>
 </li>
@@ -393,7 +401,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-10-14 12:01:10 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-10-28 12:11:07 GMT Daylight Time.
 </div>
 </div>
 </td>
