Update the website form
Use new jemdoc

--- a/opendata.html
+++ b/opendata.html
@@ -8,7 +8,7 @@
 <link rel="icon" href="./images/icon.png">
 <link rel="stylesheet" href="main.css" type="text/css" />
 <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-<!--- <title>Education and Work</title> --->
+<!--- <title>Open Data</title> --->
 <!-- MathJax -->
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async>
 </script>
@@ -40,7 +40,7 @@ MathJax.Hub.Config({
 <div class="menu-item"><a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a></div>
 <div class="menu-category">About me</div>
 <div class="menu-item"><a href="index.html"|3>Home</a></div>
-<div class="menu-item"><a href="eduwork.html" class="current"|3>Education&nbsp;and&nbsp;Work</a></div>
+<div class="menu-item"><a href="eduwork.html"|3>Education&nbsp;and&nbsp;Work</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="publication.html"|3>Publications</a></div>
 <div class="menu-item"><a href="activity.html"|3>Professional&nbsp;Activities</a></div>
@@ -49,70 +49,47 @@ MathJax.Hub.Config({
 <div class="menu-category">Teaching</div>
 <div class="menu-item"><a href="module.html"|3>Modules</a></div>
 <div class="menu-item"><a href="ebook.html"|3>Ebooks</a></div>
-<div class="menu-item"><a href="opendata.html"|3>Open&nbsp;Data</a></div>
+<div class="menu-item"><a href="opendata.html" class="current"|3>Open&nbsp;Data</a></div>
 </div> <!-- <div id="layout-menu"> -->
 </div> <!-- <div id="layout-menu-container"> -->
 <div id="layout-content-container">
 <div id="layout-content">
 <div id="toptitle">
-<h1>Education and Work</h1>
-<div id="subtitle"></div>
+<h1>Datasets and Reproducible Code</h1>
+<div id="subtitle">
+</div>
 </div>
-<p><div id="Education"></p>
-<h2>Education</h2>
+<p><div id="Datasets"></p>
+<h2>Datasets</h2>
 <ul>
-<li><p>Sep. 2015 - Aug. 2017: Doctor of Philosophy (Ph.D.) in Engineering, Inje University, Gimhae, Korea</p>
+<li><p>Microsoft Malware Classification Challenge (BIG 2015): <a href="https://www.kaggle.com/c/malware-classification/data">https://www.kaggle.com/c/malware-classification/data</a></p>
 </li>
-<li><p>Sep. 2013 - Aug. 2015: Master of Science (MSc) in Telecommunications, Inje University, Gimhae, Korea</p>
+<li><p>Recordings of Digital and Analog Modulation Types (RadioML): <a href="https://www.deepsig.io/datasets">https://www.deepsig.io/datasets</a></p>
 </li>
-<li><p>Sep. 2008 - Aug. 2013: Bachelor of Engineering (BEng) in Electronics and Telecommunications, Hanoi University of Science and Technology, Hanoi, Vietnam</p>
+<li><p>Power Allocation in Multi-cell Massive MIMO: <a href="https://data.ieeemlc.org/Ds2Detail">https://data.ieeemlc.org/Ds2Detail</a></p>
 </li>
-<li><p>Sep. 2005 - Aug. 2008: Donggia High School, Hai Duong, Vietnam</p>
+<li><p>IEEE Machine Learning for Communications ETI: <a href="https://mlc.committees.comsoc.org/">https://mlc.committees.comsoc.org/</a></p>
+</li>
+<li><p>Drone Remote Controller RF Signal Dataset: <a href="https://ieee-dataport.org/open-access/drone-remote-controller-rf-signal-dataset">https://ieee-dataport.org/open-access/drone-remote-controller-rf-signal-dataset</a>
+</p>
 </li>
 </ul>
-<p></div>
-
-</p>
-<p><div id="Academic Experience"></p>
-<h2>Academic Experience</h2>
+<p><div id="Reproducible Code"></p>
+<h2>Reproducible Code</h2>
 <ul>
-<li><p>Jan. 2023 - Present: Assistant Professor, School of Computer Science and Statistics, Trinity College Dublin, The University of Dublin, Ireland</p>
+<li><p><a href="https://github.com/vannguyentoan/OFDM_Modulation_Classification">OFDMsym-Net for OFDM Modulation Classification</a></p>
 </li>
-<li><p>Jan. 2023 - Present: Supervisor, SFI Centre for Research Training in Advanced Networks for Sustainable Societies (AdvanceCRT), Ireland</p>
+<li><p><a href="https://github.com/vannguyentoan/LPI-Radar-Waveform-Recognition">LPI-Net for LPI Radar Waveform Recognition</a> </p>
 </li>
-<li><p>Jan. 2023 - Present: Associate Investigator, SFI Centre for Future Networks and Communications (CONNECT), Ireland</p>
+<li><p><a href="https://github.com/ThienHuynhThe/RF-based-Drone-Surveillance-with-DL">DroneRF Dataset and RF-UAVNet for RF-based Drone Surveillance Systems</a></p>
 </li>
-<li><p>Jan. 2020 - Jan. 2023: Research Professor, Pusan National University, Korea</p>
+<li><p><a href="https://github.com/ThienHuynhThe/MCNet">MCNet for Automatic Modulation Classification</a></p>
 </li>
-<li><p>Mar. 2018 - Dec. 2019: Research Professor, Changwon National University / Inje University, Korea</p>
+<li><p><a href="https://github.com/phamqv/Energy-Efficient-FL-Wireless-Powered-UAV">Federated Learning over UAV-enabled Wireless Powered Communications</a></p>
 </li>
-<li><p>Sep. 2017 - Feb. 2018: Postdoctoral Researcher, Kyung Hee University, Korea</p>
+<li><p><a href="https://github.com/phamqv/WOA_5G_Communications">Whale Optimization Algorithm for Resource Allocation</a></p>
 </li>
-<li><p>Sep. 2013 - Aug. 2017: Research Assistant, Inje University, Korea</p>
-</li>
-<li><p>Feb. 2012 - Aug. 2013: Research Assistant, Hanoi University of Science and Technology, Vietnam</p>
-</li>
-</ul>
-<p></div>
-
-</p>
-<p><div id="Administrative Experience"></p>
-<h2>Administrative Experience</h2>
-<ul>
-<li><p>Aug. 2023 - Present: Demonstrator and Teaching Assistant Director, School of Computer Science and Statistics, Trinity College Dublin, Ireland</p>
-</li>
-</ul>
-<p></div>
-
-</p>
-<p><div id="Visiting Experience"></p>
-<h2>Visiting Experience</h2>
-<ul>
-<li><p>Jun. 2023 - Jul. 2023: CIT Lab, University of Ulsan, Korea, Prof. Sunghwan Kim</p>
-</li>
-<li><p>Jan. 2016 - Feb. 2016: Tokyo University of Science, Japan, Prof. Mikio Hasegawa</p>
-</li>
-<li><p>Aug. 2019 - Aug. 2019: Tokyo University of Science, Japan, Prof. Mikio Hasegawa</p>
+<li><p><a href="https://github.com/phamqv/UAV-NOMA-Visible-Light-Communications-Swarm-Intelligence">Swarm Intelligence and Machine Learning for UAV-assisted VLC-NOMA</a></p>
 </li>
 </ul>
 </div> <!-- <div id="layout-content"> -->
