--- a/COIN/team.html
+++ b/COIN/team.html
@@ -81,7 +81,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422">Web of Scie
 <p><div id="Student-container"></p>
 <h2>Students</h2>
 <table class="imgtable"><tr><td>
-<img src="./images/people/p1.png" alt="member pic" width="100px" />&nbsp;</td>
+<img src="./images/people/linh.png" alt="member pic" width="100px" />&nbsp;</td>
 <td align="left"><p><div id="Student">
 <b>Linh Thanh Nguyen</b></p>
 <ul>
@@ -93,7 +93,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422">Web of Scie
 <p></div></p>
 </td></tr></table>
 <table class="imgtable"><tr><td>
-<img src="./images/people/p2.png" alt="member pic" width="100px" />&nbsp;</td>
+<img src="./images/people/tuan.png" alt="member pic" width="100px" />&nbsp;</td>
 <td align="left"><p><div id="Student">
 <b>Tuan Van Tran</b></p>
 <ul>
@@ -265,7 +265,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422">Web of Scie
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023 COIN-TCD. Last edited  on 2023-11-23 18:37:38 GMT Standard Time. </br>
+Copyright @2017-2023 COIN-TCD. Last edited  on 2023-11-23 18:41:43 GMT Standard Time. </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
