--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ MathJax.Hub.Config({
 <img src="./images/Portrait_Viet.jpg" alt="profile pic" width="180px" height="230px" />&nbsp;</td>
 <td align="left"><p>Assistant Professor of Networks and Distributed Systems <br />
 <a href="https://www.scss.tcd.ie/">School of Computer Science and Statistics</a> <br />
-<a href="https://www.tcd.ie/">Trinity College Dublin</a>, The University of Dublin</p>
+<a href="https://www.tcd.ie/">Trinity College Dublin</a>, The University of Dublin <br /></p>
 <h4>Contacts</h4>
 <ul>
 <li><p>E-mail: x.y@z, where x = viet, y = pham, and z = tcd.ie</p>
@@ -181,7 +181,7 @@ I very often have problems answering the &ldquo;What is your correct name?&rdquo
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023 COIN-TCD. Last edited  on 2023-11-23 16:10:28 GMT Standard Time. </br>
+Copyright @2017-2023 COIN-TCD. Last edited  on 2023-11-23 21:48:57 GMT Standard Time. </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
