Update the form

--- a/index.html
+++ b/index.html
@@ -18,15 +18,14 @@ MathJax.Hub.Config({
 });
 </script>
 <!-- End MathJax -->
+</head>
+<body>
 <div id="main-container">
 <div id="header-container">
 <div id="header">
 <div id="header-icon-text-container">
-<div id="header-icon-container" >
-<a href="index.html"><img src="./images/header.png" alt="" style="width: 100%; height: 100%; position: center; padding:0px; margin: 0px;"></a>
-</div>
 <div id="header-text-container">
-<a href="index.html">COIN-Lab@TCD</a>
+<a href="index.html">Viet Quoc Pham</a>
 </div>
 </div>
 <div id="main">
@@ -58,10 +57,10 @@ MathJax.Hub.Config({
 <h1>Viet Quoc Pham</h1>
 </div>
 <table class="imgtable"><tr><td>
-<img src="./images/Portrait_Viet.jpg" alt="profile pic" width="180px" height="230px" />&nbsp;</td>
+<img src="./images/Portrait_Viet.jpg" alt="profile pic" width="180px" />&nbsp;</td>
 <td align="left"><p>Assistant Professor of Networks and Distributed Systems <br />
 <a href="https://www.scss.tcd.ie/">School of Computer Science and Statistics</a> <br />
-<a href="https://www.tcd.ie/">Trinity College Dublin</a>, The University of Dublin <br /></p>
+<a href="https://www.tcd.ie/">Trinity College Dublin</a>, The University of Dublin</p>
 <h4>Contacts</h4>
 <ul>
 <li><p>E-mail: x.y@z, where x = viet, y = pham, and z = tcd.ie</p>
@@ -181,7 +180,7 @@ I very often have problems answering the &ldquo;What is your correct name?&rdquo
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023 COIN-TCD. Last edited  on 2023-11-23 21:48:57 GMT Standard Time. </br>
+Copyright @2017-2023. Last edited  on 2023-11-24 00:20:26 GMT Standard Time. </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
