--- a/module.html
+++ b/module.html
@@ -18,15 +18,14 @@ MathJax.Hub.Config({
 });
 </script>
 <!-- End MathJax -->
+</head>
+<body>
 <div id="main-container">
 <div id="header-container">
 <div id="header">
 <div id="header-icon-text-container">
-<div id="header-icon-container" >
-<a href="index.html"><img src="./images/header.png" alt="" style="width: 100%; height: 100%; position: center; padding:0px; margin: 0px;"></a>
-</div>
 <div id="header-text-container">
-<a href="index.html">COIN-Lab@TCD</a>
+<a href="index.html">Viet Quoc Pham</a>
 </div>
 </div>
 <div id="main">
@@ -103,7 +102,7 @@ MathJax.Hub.Config({
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Copyright @2017-2023 COIN-TCD. Last edited  on 2023-11-23 16:10:28 GMT Standard Time. </br>
+Copyright @2017-2023. Last edited  on 2023-11-24 00:21:57 GMT Standard Time. </br>
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
 </div> <!-- <div id="footer-container"> -->
